environments/prd/analytics-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics-service-prd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: analytics-service
          image: toggleacrfase3.azurecr.io/analytics-service:46183a4
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
